--- a/sk2-irc/CMakeLists.txt
+++ b/sk2-irc/CMakeLists.txt
@@ -25,6 +25,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
         login.h login.cpp login.ui
         reader.h reader.cpp
+        namechannel.h namechannel.cpp namechannel.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET sk2-irc APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
